--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,10 +88,10 @@
         <div class="col-md-6 col-lg-3">
           <div class="card book-card">
             <span class="type-badge">E-Book</span>
-            <img src="SAMPUL-[E-Book].png" class="card-img-top book-img" alt="E-Book 1">
+            <img src="${book.description}" class="card-img-top book-img" alt="E-Book 1">
             <div class="card-body">
-              <h5 class="card-title">Pemrograman Python untuk Pemula</h5>
-              <p class="text-muted small mb-2">Oleh: John Developer</p>
+              <h5 class="card-title">${book.title}</h5>
+              <p class="text-muted small mb-2">Oleh: ${book.author}</p>
               <div class="d-flex justify-content-between align-items-center mb-2">
                 <span class="badge bg-danger">Terlaris</span>
                 <div class="rating">
@@ -108,87 +108,8 @@
             </div>
           </div>
         </div>
-
-        <!-- E-Book 2 -->
-        <div class="col-md-6 col-lg-3">
-          <div class="card book-card">
-            <span class="type-badge">E-Book</span>
-            <img src="rancangbangunwebsitemodern.png" class="card-img-top book-img" alt="E-Book 2">
-            <div class="card-body">
-              <h5 class="card-title">Rancang Bangun Website Modern</h5>
-              <p class="text-muted small mb-2">Oleh: Sarah Designer</p>
-              <div class="d-flex justify-content-between align-items-center mb-2">
-                <span class="badge bg-secondary">2024</span>
-                <div class="rating">
-                  <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i><i class="far fa-star"></i>
-                  <span class="ms-1">4.0</span>
-                </div>
-              </div>
-              <div class="mb-2">
-                <span class="kategori-badge">Web Design</span>
-                <span class="kategori-badge">UX/UI</span>
-              </div>
-              <div id="harga-ebook-2" class="text-success fw-bold mb-2">Harga: Rp 50.000</div>
-              <a id="btn-ebook-2" href="Pembayaran-ebook-2.html?ebook=2" class="btn btn-success w-100">Bayar Sekarang</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- E-Book 3 -->
-        <div class="col-md-6 col-lg-3">
-          <div class="card book-card">
-            <span class="type-badge">E-Book</span>
-            <img src="artificialintelligencekonsepdasar.png" class="card-img-top book-img" alt="E-Book 3">
-            <div class="card-body">
-              <h5 class="card-title">Artificial Intelligence: Konsep Dasar</h5>
-              <p class="text-muted small mb-2">Oleh: Dr. Alan Smith</p>
-              <div class="d-flex justify-content-between align-items-center mb-2">
-                <span class="badge bg-info text-dark">AI Topik</span>
-                <div class="rating">
-                  <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i><i class="fas fa-star"></i>
-                  <span class="ms-1">5.0</span>
-                </div>
-              </div>
-              <div class="mb-2">
-                <span class="kategori-badge">Teknologi</span>
-                <span class="kategori-badge">AI</span>
-              </div>
-              <div id="harga-ebook-3" class="text-success fw-bold mb-2">Harga: Rp 40.000</div>
-              <a id="btn-ebook-3" href="Pembayaran-ebook-3.html?ebook=3" class="btn btn-success w-100">Bayar Sekarang</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- E-Book 4 -->
-        <div class="col-md-6 col-lg-3">
-          <div class="card book-card">
-            <span class="type-badge">E-Book</span>
-            <img src="manajemenbisnisdigitaL.png" class="card-img-top book-img" alt="E-Book 4">
-            <div class="card-body">
-              <h5 class="card-title">Manajemen Bisnis Digital</h5>
-              <p class="text-muted small mb-2">Oleh: Rebecca Johnson</p>
-              <div class="d-flex justify-content-between align-items-center mb-2">
-                <span class="badge bg-warning text-dark">Baru</span>
-                <div class="rating">
-                  <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i><i class="far fa-star"></i>
-                  <span class="ms-1">3.5</span>
-                </div>
-              </div>
-              <div class="mb-2">
-                <span class="kategori-badge">Bisnis</span>
-                <span class="kategori-badge">Digital</span>
-              </div>
-              <div id="harga-ebook-4" class="text-success fw-bold mb-2">Harga: Rp 55.000</div>
-              <a id="btn-ebook-4" href="Pembayaran-ebook-4.html?ebook=4" class="btn btn-success w-100">Bayar Sekarang</a>
-            </div>
-          </div>
-        </div>
-
-      </div>
     </div>
+  </div>
   </section>
 
   <!-- Script cek status pembayaran -->
